force-app/main/default/objects/JIT_Day__c/JIT_Day__c.object-meta.xml
<CustomObject>
    <label>JIT Day</label>
    <nameField>
        <label>JIT Day Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JIT Days</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>