force-app/main/default/objects/JIT_Day__c/fields/Franchise__c.field-meta.xml
<CustomField>
    <fullName>Franchise__c</fullName>
    <label>Franchise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KIAPC</fullName>
            </value>
            <value>
                <fullName>KIACV</fullName>
            </value>
            <value>
                <fullName>MITPC</fullName>
            </value>
            <value>
                <fullName>MITCV</fullName>
            </value>
            <value>
                <fullName>CITPC</fullName>
            </value>
            <value>
                <fullName>CITCV</fullName>
            </value>
            <value>
                <fullName>MAXUSPC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>