force-app/main/default/objects/JIT_Day__c/fields/No_of_Slots__c.field-meta.xml
<CustomField>
    <fullName>No_of_Slots__c</fullName>
    <label>No. of Slots</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>