force-app/main/default/objects/JIT_Day__c/fields/Opened_Slots__c.field-meta.xml
<CustomField>
    <fullName>Opened_Slots__c</fullName>
    <label>Opened Slots</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>