force-app/main/default/objects/JIT_Day__c/fields/Remaining_Slots__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Slots__c</fullName>
    <formula>No_of_Slots__c +  Opened_Slots__c -  Utilised_Slots__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Slots</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>