force-app/main/default/objects/JIT_Day__c/fields/Utilised_Slots__c.field-meta.xml
<CustomField>
    <fullName>Utilised_Slots__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Utilised Slots</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>