force-app/main/default/objects/JIT_Day__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>JIT_Date__c</columns>
    <columns>No_of_Slots__c</columns>
    <columns>Opened_Slots__c</columns>
    <columns>Remaining_Slots__c</columns>
    <columns>Utilised_Slots__c</columns>
    <columns>Franchise__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>JIT_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>All</label>
</ListView>